# SpotifyAPI_v2

./: README.md  pyproject.toml  structure.md
scripts/: auth.py  cli.py  client.py  config.py  delete.py  monthly.py  playlists.py  state.py  test.py  weekly.py
scripts/spotify_api_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
spotify_api_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_naming.py  test_state.py
